# clipboard

./: .gitignore  Cargo.toml  README.md  gradle.properties  settings.gradle.kts
clipboard-client/: build.gradle.kts  gradle.properties  settings.gradle.kts
clipboard-client/src/androidTest/java/com/example/clipboard_client/: ExampleInstrumentedTest.kt
clipboard-client/src/main/: AndroidManifest.xml  new2.sh
clipboard-client/src/main/java/com/example/clipboard_client/: ClipboardSyncService.kt  MainActivity.kt
clipboard-client/src/main/java/com/example/clipboard_client/ui/theme/: Color.kt  Theme.kt  Type.kt
clipboard-client/src/main/res/drawable/: ic_launcher_background.xml
clipboard-client/src/main/res/drawable-v24/: ic_launcher_foreground.xml
clipboard-client/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
clipboard-client/src/main/res/values/: strings.xml  themes.xml
clipboard-client/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
clipboard-client/src/test/java/com/example/clipboard_client/: ExampleUnitTest.kt
gradle/: gradle-daemon-jvm.properties
gradle/wrapper/: gradle-wrapper.properties
src/: main.rs
