[package]
name = "clipboard-server"
version = "0.1.0"
edition = "2024"
default-run = "clipboard-server"


[dependencies]
tokio = { version = "1", features = ["full"] }
mdns-sd = "0.7"
arboard = "3.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
uuid = { version = "1.23.3", features = ["v4"] }




